added custom metrics
