# cmd/CoffeeMachineRestApiV3/docs/swagger.json
@@ -663,6 +663,28 @@
                     }
                 }
             }
+        },
+        "/statistics": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Statistics endpoint (metrics)",
+                "produces": [
+                    "text/plain"
+                ],
+                "summary": "Statistics endpoint (metrics)",
+                "responses": {
+                    "200": {
+                        "description": ""
+                    },
+                    "500": {
+                        "description": ""
+                    }
+                }
+            }
         }
     },
     "definitions": {
